--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .font-lato{
     font-family: 'Lato', sans-serif;
 }
+.meet-section{
+    background-image: url("./images/banner1.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: inset 0 0 0 2000px rgba(26, 23, 24, 0.671);
+}
